<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mn_faq"
        android:icon="@drawable/ic_help_outline_white_24dp"
        android:visible="false"
        android:title="FAQ"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mn_invoices"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/invoices"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mn_raffles"
        android:icon="@drawable/ic_casino_white_24dp"
        android:title="@string/raffles"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mn_about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/about_the_app"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mn_source"
        android:icon="@drawable/ic_code_white_24dp"
        android:title="@string/open_source"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mn_exit"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />

</menu>
